--- a/index.html
+++ b/index.html
@@ -49,11 +49,15 @@
                 <div class="modal_info">
                     <p class="description_modal">Esta pagina no utiliza cookies ni ninguno de sus datos</p>
                     <div class="btn_container">
-                        <button type="button" class="inner_link_btn" data-name="legal_modal">Avisos legales</button>
+                        <button type="button" class="inner_link_btn" data-name="legal_modal">
+                            <span class="label_btn">Avisos legales</span>
+                        </button>
                     </div>
                 </div>
                 <div class="btn_container">
-                    <button type="button" class="btn more_btn storage_accept">Aceptar</button>
+                    <button type="button" class="btn more_btn storage_accept">
+                        <span class="label_btn">Aceptar</span>
+                    </button>
                 </div>
                 <button class="close_btn close_modal" id="alert_modal_storage_close_btn" data-name="alert_modal">
                     <svg class="close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
@@ -82,7 +86,9 @@
                         enim, recusandae voluptatibus laborum obcaecati. Maiores aut quae architecto molestiae quisquam nemo odio est soluta ut!
                     </p>
                     <div class="btn_container">
-                        <button type="button" class="btn more_btn" id="legal_modal_accept_btn">Aceptar</button>
+                        <button type="button" class="btn more_btn" id="legal_modal_accept_btn">
+                            <span class="label_btn">Aceptar</span>
+                        </button>
                     </div>
                 </div>
                 <button class="close_btn close_modal" id="modal_legal_close_btn" data-name="legal_modal">
@@ -1400,8 +1406,12 @@
                         <p class="link_text">@JohnKrazy</p>
                         <p class="copyright_text">© 2023 JohnKrazy. All rights reserved</p>
                         <div class="btns_container">
-                            <button type="button" class="link_btn" data-name="legal_modal">Legales</button>
-                            <button type="button" class="link_btn" data-name="alert_modal">Uso de datos</button>
+                            <button type="button" class="link_btn" data-name="legal_modal">
+                                <span class="label_btn">Legales</span>
+                            </button>
+                            <button type="button" class="link_btn" data-name="alert_modal">
+                                <span class="label_btn">Uso de datos</span>
+                            </button>
                         </div>
                     </div>
                     <div class="social_btns_container">
