src links, as always

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <!--!JAVASCRIPT-->
-        <script type="module" charset="utf-8" src="/src/js/index.js"></script>
+        <script type="module" charset="utf-8" src="./src/js/index.js"></script>
         <link rel="icon" type="image/svg" href="" />
         <link rel="apple-touch-icon" href="" />
         <link rel="canonical" href="" />
@@ -24,7 +24,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet" />
 
         <!--!STYLES-->
-        <link rel="stylesheet" href="/src/css/style.css" />
+        <link rel="stylesheet" href="./src/css/style.css" />
     </head>
     <body class="dark_theme">
         <svg class="svg_gradients">
