fix --> my animation overflow

--- a/index.html
+++ b/index.html
@@ -1316,9 +1316,9 @@
                     </form>
                 </div>
             </section>
-            <img src="/src/img/desk.png" class="desk_img desk" data-name="desk" />
-            <img src="/src/img/rex.png" class="desk_img rex" data-name="rex" />
-            <img src="/src/img/me.png" class="desk_img me" data-name="me" />
+            <img src="./src/img/desk.png" class="desk_img desk" data-name="desk" />
+            <img src="./src/img/rex.png" class="desk_img rex" data-name="rex" />
+            <img src="./src/img/me.png" class="desk_img me" data-name="me" />
         </main>
 
         <footer class="legals_section" id="legals_section">
