remove illustration and animation :(

--- a/index.html
+++ b/index.html
@@ -495,6 +495,7 @@
                     </div>
                 </div>
             </div>
+            <h1 class="subtitle_section animation_up" id="subtitle_section_search" style="opacity: 1; transform: translateY(0px)">Busqueda por tipo</h1>
             <nav class="drop_down_container">
                 <button type="button" class="btn search_list_btn">
                     <span class="label_btn">Categorias</span>
@@ -1312,10 +1313,6 @@
                 </form>
             </div>
         </section>
-        <img src="./src/img/desk.png" class="desk_img desk" data-name="desk" />
-        <img src="./src/img/rex.png" class="desk_img rex" data-name="rex" />
-        <img src="./src/img/me.png" class="desk_img me" data-name="me" />
-
         <footer class="legals_section" id="legals_section">
             <div class="max_width footer_content">
                 <div class="icons_container">
