--- a/index.html
+++ b/index.html
@@ -1315,88 +1315,61 @@
         </section>
         <footer class="legals_section" id="legals_section">
             <div class="max_width footer_content">
-                <div class="icons_container">
+                <div class="made_container">
                     <span class="title_footer" id="title_footer_id">Página realizada con:</span>
-                    <div class="icon_container tech_logo_container" id="html_logo_container">
-                        <svg class="client_icon_svg html_icon_svg" data-name="html_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
-                            <title>HTML</title>
-                            <polygon class="cls-1" points="5.26 22.99 3.64 4.91 21.36 4.91 19.74 22.99 12.49 25 5.26 22.99" />
-                            <polygon class="cls-2" points="12.5 23.46 18.36 21.84 19.74 6.39 12.5 6.39 12.5 23.46" />
-                            <polygon
-                                class="cls-3"
-                                points="12.5 8.61 12.49 8.61 6.94 8.61 6.99 9.2 7.54 15.31 12.49 15.31 12.5 15.31 15.22 15.31 14.96 18.19 12.49 18.86 12.49 18.86 12.49 18.86 10.02 18.19 9.86 16.42 8.66 16.42 7.64 16.42 7.95 19.9 12.49 21.16 12.5 21.16 12.5 21.16 17.04 19.9 17.07 19.53 17.59 13.69 17.65 13.1 17.05 13.1 12.5 13.1 12.49 13.1 9.57 13.1 9.36 10.83 12.49 10.83 12.5 10.83 17.84 10.83 17.85 10.83 17.89 10.33 17.99 9.2 18.05 8.61 12.5 8.61"
-                            />
-                            <polygon class="cls-4" points="12.5 13.1 9.57 13.1 9.36 10.83 12.5 10.83 12.5 8.61 12.49 8.61 6.94 8.61 6.99 9.2 7.54 15.31 12.5 15.31 12.5 13.1" />
-                            <polygon class="cls-4" points="12.5 18.86 12.49 18.86 10.02 18.19 9.86 16.42 8.66 16.42 7.64 16.42 7.95 19.9 12.49 21.16 12.5 21.16 12.5 18.86" />
-                            <polygon class="cls-5" points="7.3 0 7.3 1.33 5.96 1.33 5.96 0 4.98 0 4.98 3.37 5.96 3.37 5.96 1.99 5.96 1.96 7.3 1.96 7.3 3.37 8.28 3.37 8.28 0 7.3 0" />
-                            <polygon class="cls-5" points="17.7 2.74 17.7 0 16.72 0 16.72 3.37 20.02 3.37 20.02 2.74 17.7 2.74" />
-                            <polygon class="cls-5" points="15.29 0 15.29 0 14.37 1.58 13.46 0 13.46 0 12.48 0 12.48 3.37 13.46 3.37 13.46 1.99 13.46 1.97 14.27 3.37 14.48 3.37 15.29 1.97 15.29 1.99 15.29 3.37 16.27 3.37 16.27 0 15.29 0" />
-                            <polygon class="cls-5" points="12.03 0 10.87 0 9.89 0 8.73 0 8.73 0.63 9.89 0.63 9.89 3.37 10.87 3.37 10.87 0.63 12.03 0.63 12.03 0" />
-                        </svg>
-                    </div>
-                    <h2 class="plus_sign">+</h2>
-                    <div class="icon_container tech_logo_container" id="css_logo_container">
-                        <svg class="client_icon_svg css_icon_svg" data-name="css_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
-                            <title>CSS</title>
-                            <polygon class="cls-1" points="5.26 22.99 3.64 4.91 21.36 4.91 19.74 22.99 12.49 25 5.26 22.99" />
-                            <polygon class="cls-2" points="12.5 23.46 18.36 21.84 19.74 6.39 12.5 6.39 12.5 23.46" />
-                            <polygon class="cls-3" points="6.75 10.56 6.53 8.47 18.47 8.47 18.33 10.89 13.28 13.13 18.13 13.13 17.6 20 12.72 21.31 7.66 20.08 7.34 16.6 9.58 16.6 9.71 18.44 12.64 18.98 15.35 18.16 15.47 15.21 7.15 15.21 7 13.02 12.5 10.61 6.75 10.56" />
-                            <polygon class="cls-4" points="7 13.02 7.15 15.21 12.5 15.21 12.5 10.61 7 13.02" />
-                            <polygon class="cls-4" points="9.71 18.44 9.58 16.6 7.34 16.6 7.66 20.08 12.5 21.26 12.5 18.96 9.71 18.44" />
-                            <polygon class="cls-4" points="6.53 8.47 6.75 10.56 12.5 10.61 12.5 8.47 6.53 8.47" />
-                            <polygon class="cls-5" points="14.21 0.84 14.21 0 10.84 0 10.84 1.97 13.16 1.97 13.16 2.6 10.77 2.6 10.77 3.37 14.14 3.37 14.14 1.33 11.75 1.33 11.75 0.84 14.21 0.84" />
-                            <polygon class="cls-5" points="8.1 1.99 8.1 2.6 10.49 2.6 10.49 3.37 7.12 3.37 7.12 1.35 7.12 0 10.42 0 10.42 0.84 8.1 0.84 8.1 1.99" />
-                            <polygon class="cls-5" points="17.93 0.84 17.93 0 14.56 0 14.56 1.97 16.88 1.97 16.88 2.6 14.49 2.6 14.49 3.37 17.86 3.37 17.86 1.33 15.47 1.33 15.47 0.84 17.93 0.84" />
-                        </svg>
-                    </div>
+                    <div class="icons_container">
+                        <div class="icon_container tech_logo_container" id="html_logo_container">
+                            <svg class="client_icon_svg html_icon_svg" data-name="html_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                                <title>HTML</title>
+                                <polygon class="cls-1" points="5.26 22.99 3.64 4.91 21.36 4.91 19.74 22.99 12.49 25 5.26 22.99" />
+                                <polygon class="cls-2" points="12.5 23.46 18.36 21.84 19.74 6.39 12.5 6.39 12.5 23.46" />
+                                <polygon
+                                    class="cls-3"
+                                    points="12.5 8.61 12.49 8.61 6.94 8.61 6.99 9.2 7.54 15.31 12.49 15.31 12.5 15.31 15.22 15.31 14.96 18.19 12.49 18.86 12.49 18.86 12.49 18.86 10.02 18.19 9.86 16.42 8.66 16.42 7.64 16.42 7.95 19.9 12.49 21.16 12.5 21.16 12.5 21.16 17.04 19.9 17.07 19.53 17.59 13.69 17.65 13.1 17.05 13.1 12.5 13.1 12.49 13.1 9.57 13.1 9.36 10.83 12.49 10.83 12.5 10.83 17.84 10.83 17.85 10.83 17.89 10.33 17.99 9.2 18.05 8.61 12.5 8.61"
+                                />
+                                <polygon class="cls-4" points="12.5 13.1 9.57 13.1 9.36 10.83 12.5 10.83 12.5 8.61 12.49 8.61 6.94 8.61 6.99 9.2 7.54 15.31 12.5 15.31 12.5 13.1" />
+                                <polygon class="cls-4" points="12.5 18.86 12.49 18.86 10.02 18.19 9.86 16.42 8.66 16.42 7.64 16.42 7.95 19.9 12.49 21.16 12.5 21.16 12.5 18.86" />
+                                <polygon class="cls-5" points="7.3 0 7.3 1.33 5.96 1.33 5.96 0 4.98 0 4.98 3.37 5.96 3.37 5.96 1.99 5.96 1.96 7.3 1.96 7.3 3.37 8.28 3.37 8.28 0 7.3 0" />
+                                <polygon class="cls-5" points="17.7 2.74 17.7 0 16.72 0 16.72 3.37 20.02 3.37 20.02 2.74 17.7 2.74" />
+                                <polygon class="cls-5" points="15.29 0 15.29 0 14.37 1.58 13.46 0 13.46 0 12.48 0 12.48 3.37 13.46 3.37 13.46 1.99 13.46 1.97 14.27 3.37 14.48 3.37 15.29 1.97 15.29 1.99 15.29 3.37 16.27 3.37 16.27 0 15.29 0" />
+                                <polygon class="cls-5" points="12.03 0 10.87 0 9.89 0 8.73 0 8.73 0.63 9.89 0.63 9.89 3.37 10.87 3.37 10.87 0.63 12.03 0.63 12.03 0" />
+                            </svg>
+                        </div>
+                        <h2 class="plus_sign">+</h2>
+                        <div class="icon_container tech_logo_container" id="css_logo_container">
+                            <svg class="client_icon_svg css_icon_svg" data-name="css_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                                <title>CSS</title>
+                                <polygon class="cls-1" points="5.26 22.99 3.64 4.91 21.36 4.91 19.74 22.99 12.49 25 5.26 22.99" />
+                                <polygon class="cls-2" points="12.5 23.46 18.36 21.84 19.74 6.39 12.5 6.39 12.5 23.46" />
+                                <polygon class="cls-3" points="6.75 10.56 6.53 8.47 18.47 8.47 18.33 10.89 13.28 13.13 18.13 13.13 17.6 20 12.72 21.31 7.66 20.08 7.34 16.6 9.58 16.6 9.71 18.44 12.64 18.98 15.35 18.16 15.47 15.21 7.15 15.21 7 13.02 12.5 10.61 6.75 10.56" />
+                                <polygon class="cls-4" points="7 13.02 7.15 15.21 12.5 15.21 12.5 10.61 7 13.02" />
+                                <polygon class="cls-4" points="9.71 18.44 9.58 16.6 7.34 16.6 7.66 20.08 12.5 21.26 12.5 18.96 9.71 18.44" />
+                                <polygon class="cls-4" points="6.53 8.47 6.75 10.56 12.5 10.61 12.5 8.47 6.53 8.47" />
+                                <polygon class="cls-5" points="14.21 0.84 14.21 0 10.84 0 10.84 1.97 13.16 1.97 13.16 2.6 10.77 2.6 10.77 3.37 14.14 3.37 14.14 1.33 11.75 1.33 11.75 0.84 14.21 0.84" />
+                                <polygon class="cls-5" points="8.1 1.99 8.1 2.6 10.49 2.6 10.49 3.37 7.12 3.37 7.12 1.35 7.12 0 10.42 0 10.42 0.84 8.1 0.84 8.1 1.99" />
+                                <polygon class="cls-5" points="17.93 0.84 17.93 0 14.56 0 14.56 1.97 16.88 1.97 16.88 2.6 14.49 2.6 14.49 3.37 17.86 3.37 17.86 1.33 15.47 1.33 15.47 0.84 17.93 0.84" />
+                            </svg>
+                        </div>
 
-                    <h2 class="plus_sign">+</h2>
-                    <div class="icon_container tech_logo_container" id="js_logo_container">
-                        <svg class="client_icon_svg js_icon_svg" data-name="js_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
-                            <title>JavaScript</title>
-                            <path class="cls-1" d="M0,0H25V25H0Z" />
-                            <path class="cls-2" d="M6.57,20.89l1.92-1.16c.37.66.7,1.21,1.51,1.21s1.26-.3,1.26-1.47v-8H13.6v8A3.19,3.19,0,0,1,10.1,23a3.65,3.65,0,0,1-3.53-2.15" />
-                            <path
-                                class="cls-2"
-                                d="M14.88,20.64l1.91-1.11A2.58,2.58,0,0,0,19.11,21c1,0,1.59-.49,1.59-1.16s-.63-1.09-1.71-1.56L18.41,18c-1.7-.72-2.82-1.63-2.82-3.54A3.14,3.14,0,0,1,19,11.34a3.48,3.48,0,0,1,3.34,1.88L20.54,14.4a1.61,1.61,0,0,0-1.51-1,1,1,0,0,0-1.13,1c0,.7.44,1,1.44,1.42l.59.26c2,.85,3.12,1.72,3.12,3.69S21.39,23,19.16,23a4.52,4.52,0,0,1-4.28-2.4"
-                            />
-                        </svg>
-                    </div>
-
-                    <h2 class="plus_sign">+</h2>
-
-                    <div class="icon_container tech_logo_container" id="coffe_logo_container">
-                        <svg class="client_icon_svg coffee_mug_icon_svg" data-name="coffee_mug_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
-                            <title>Coffee</title>
-                            <path class="cls-1" d="M8.62,10.93H9.5L6.48.34A.41.41,0,0,0,6,.05a.43.43,0,0,0-.29.52Z" />
-                            <path class="cls-2" d="M8,8.43H4A2.78,2.78,0,0,0,1.19,11.2v6.93A2.78,2.78,0,0,0,4,20.9H8a2.78,2.78,0,0,0,2.77-2.77V11.2A2.78,2.78,0,0,0,8,8.43Zm1.38,9.7A1.38,1.38,0,0,1,8,19.51H4a1.38,1.38,0,0,1-1.39-1.38V11.2A1.38,1.38,0,0,1,4,9.82H8A1.38,1.38,0,0,1,9.37,11.2Z" />
-                            <path class="cls-3" d="M6.75,5.19H21.27a1.55,1.55,0,0,1,1.55,1.55v16a.73.73,0,0,1-.73.73H5.93a.73.73,0,0,1-.73-.73v-16A1.55,1.55,0,0,1,6.75,5.19Z" />
-                            <rect class="cls-4" x="5.2" y="7.42" width="17.61" height="13.74" />
-                            <path
-                                class="cls-5"
-                                d="M10.07,15.83a4.6,4.6,0,0,1-.92.1,1.67,1.67,0,0,1-.66-.11.83.83,0,0,1-.39-.35,1.38,1.38,0,0,1-.19-.55,4,4,0,0,1-.06-.76,4.26,4.26,0,0,1,.06-.78,1.44,1.44,0,0,1,.19-.55.86.86,0,0,1,.38-.35,1.73,1.73,0,0,1,.65-.11,5,5,0,0,1,.94.11v.33a5.25,5.25,0,0,0-.9-.09.77.77,0,0,0-.73.32,2.53,2.53,0,0,0-.18,1.12,3.67,3.67,0,0,0,0,.64,1.43,1.43,0,0,0,.12.43.56.56,0,0,0,.28.27,1.25,1.25,0,0,0,.54.09,4.63,4.63,0,0,0,.83-.09Z"
-                            />
-                            <path
-                                class="cls-5"
-                                d="M10.48,14.63a1.6,1.6,0,0,1,.24-1,1,1,0,0,1,.83-.31,1,1,0,0,1,.83.31,1.6,1.6,0,0,1,.24,1,1.7,1.7,0,0,1-.23,1,1,1,0,0,1-.84.31,1,1,0,0,1-.84-.31A1.62,1.62,0,0,1,10.48,14.63Zm.38,0a1.59,1.59,0,0,0,.14.77.6.6,0,0,0,.55.22.6.6,0,0,0,.55-.22,1.59,1.59,0,0,0,.13-.77,1.52,1.52,0,0,0-.14-.76.65.65,0,0,0-.54-.2.65.65,0,0,0-.54.2A1.38,1.38,0,0,0,10.86,14.62Z"
-                            />
-                            <path class="cls-5" d="M13.71,13.71v2.17h-.38V13.71H13v-.33h.31v-.22a1.26,1.26,0,0,1,.15-.73.67.67,0,0,1,.53-.19l.5,0v.31h-.46a.28.28,0,0,0-.26.12.83.83,0,0,0-.08.46v.22h.72v.33Z" />
-                            <path class="cls-5" d="M15.36,13.71v2.17H15V13.71h-.32v-.33H15v-.22a1.26,1.26,0,0,1,.15-.73.64.64,0,0,1,.52-.19l.51,0v.31H15.7a.29.29,0,0,0-.26.12.94.94,0,0,0-.08.46v.22h.73v.33Z" />
-                            <path
-                                class="cls-5"
-                                d="M18.19,15.57h.15v.29a6.3,6.3,0,0,1-1,.08.86.86,0,0,1-.76-.31,1.67,1.67,0,0,1-.23-1q0-1.32,1.05-1.32a1,1,0,0,1,.75.28,1.31,1.31,0,0,1,.25.89l0,.29H16.76a1,1,0,0,0,.15.61.61.61,0,0,0,.53.2Zm-.13-1.08a1.05,1.05,0,0,0-.15-.65.57.57,0,0,0-.48-.19.6.6,0,0,0-.5.2,1,1,0,0,0-.17.64Z"
-                            />
-                            <path
-                                class="cls-5"
-                                d="M20.72,15.57h.14v.29a6.18,6.18,0,0,1-1,.08.88.88,0,0,1-.77-.31,1.68,1.68,0,0,1-.22-1c0-.88.35-1.32,1-1.32a1,1,0,0,1,.76.28,1.37,1.37,0,0,1,.25.89l0,.29H19.29a1,1,0,0,0,.15.61.59.59,0,0,0,.52.2Zm-.14-1.08a1.14,1.14,0,0,0-.14-.65.57.57,0,0,0-.48-.19.58.58,0,0,0-.5.2,1,1,0,0,0-.18.64Z"
-                            />
-                        </svg>
+                        <h2 class="plus_sign">+</h2>
+                        <div class="icon_container tech_logo_container" id="js_logo_container">
+                            <svg class="client_icon_svg js_icon_svg" data-name="js_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                                <title>JavaScript</title>
+                                <path class="cls-1" d="M0,0H25V25H0Z" />
+                                <path class="cls-2" d="M6.57,20.89l1.92-1.16c.37.66.7,1.21,1.51,1.21s1.26-.3,1.26-1.47v-8H13.6v8A3.19,3.19,0,0,1,10.1,23a3.65,3.65,0,0,1-3.53-2.15" />
+                                <path
+                                    class="cls-2"
+                                    d="M14.88,20.64l1.91-1.11A2.58,2.58,0,0,0,19.11,21c1,0,1.59-.49,1.59-1.16s-.63-1.09-1.71-1.56L18.41,18c-1.7-.72-2.82-1.63-2.82-3.54A3.14,3.14,0,0,1,19,11.34a3.48,3.48,0,0,1,3.34,1.88L20.54,14.4a1.61,1.61,0,0,0-1.51-1,1,1,0,0,0-1.13,1c0,.7.44,1,1.44,1.42l.59.26c2,.85,3.12,1.72,3.12,3.69S21.39,23,19.16,23a4.52,4.52,0,0,1-4.28-2.4"
+                                />
+                            </svg>
+                        </div>
                     </div>
                 </div>
                 <div class="lebels_container">
                     <div class="made_content">
                         <p class="link_text">@JohnKrazy</p>
-                        <p class="copyright_text">© 2023 JohnKrazy. All rights reserved</p>
+                        <p class="copyright_text">© 2023 JohnKrazy.</p>
+                        <p class="copyright_text">All rights reserved</p>
                         <div class="btns_container">
                             <button type="button" class="link_btn" data-name="legal_modal">
                                 <span class="label_btn">Legales</span>
