adding somo style

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet" />
 
         <!--!STYLES-->
+        <link rel="stylesheet" href="./src/css/normalize.css" />
+        <link rel="stylesheet" href="./src/css/moderCss.css" />
         <link rel="stylesheet" href="./src/css/style.css" />
     </head>
     <body class="dark_theme">
@@ -344,7 +346,7 @@
                     </svg>
                 </button>
                 <button class="action_menu menu_btn">
-                    <span class="menu_btn_text">Ménu</span>
+                    <span class="label_btn">Ménu</span>
                     <div class="btn_construction">
                         <div class="bar top_bar"></div>
                         <div class="bar center_bar"></div>
@@ -430,7 +432,7 @@
             </div>
             <!--~~SUBTITLE SECTION-->
             <div class="swipe_animation_container_full">
-                <h2 class="subtitle_section animation_up" id="subtitle_services">¿Por qué deberias contratarme?</h2>
+                <h1 class="subtitle_section animation_up" id="subtitle_services">¿Por qué deberias contratarme?</h1>
             </div>
             <!--~~SERVICES CONTAINER--SERVICES CARDS-->
         </section>
