fix --> card project animation

--- a/index.html
+++ b/index.html
@@ -434,62 +434,10 @@
             <div class="swipe_animation_container_full">
                 <h1 class="subtitle_section animation_up" id="subtitle_services">¿Por qué deberias contratarme?</h1>
             </div>
-            <!--~~SERVICES CONTAINER--SERVICES CARDS-->
         </section>
 
         <section class="section portfolio_section" id="portfolio_section">
-            <!--~~SLIDER SERVICES-->
-            <div class="sliders_container">
-                <!--&SLIDER WINDOW CONTAINER-->
-                <div class="slider_window_container">
-                    <div class="slider_container slider_container_project" id="slider_container_project_1">
-                        <div class="slider_content slider_content_normal">
-                            <img src="./src/img/leiru/leiru_mockup_full.png" loading="lazy" />
-                            <div class="info_container">
-                                <div class="slider_card_info">
-                                    <h1 class="title_slider_project_card title_slider">Globalizate</h1>
-                                    <p>Unete a la gran variedad de sitios que tenemos disponibles</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="slider_container slider_container_project" id="slider_container_portfolio_2">
-                        <div class="slider_content slider_content_reverse">
-                            <img src="./src/img/bucefalos/BUCEFALOS1-100.jpg" loading="lazy" />
-                            <div class="info_container">
-                                <div class="slider_card_info">
-                                    <h1 class="title_service_card" class="title_slider">Globalizate</h1>
-                                    <p>Unete a la gran variedad de sitios que tenemos disponibles</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!--&SLIDER MARKERS CONTAINER-->
-                <div class="markers_container" id="markers_container"></div>
-                <!--&SLIDER BTN LEFT-->
-                <div class="btn_swipe_container btn_swipe_container_left" id="btn_swipe_container_left_slider_services">
-                    <button type="button" class="btn_swipe" id="btn_swipe_left_slider_services">
-                        <svg class="arrow_icon_svg" id="arrow_left_icon_svg" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 18">
-                            <title>Izquierda</title>
-                            <path class="cls-1" d="M9,17.94V15.12l0,0L3,9A.06.06,0,0,1,3,9l6-6a.08.08,0,0,0,0,0V.06C9,0,8.91,0,8.87,0L0,9A0,0,0,0,0,0,9L8.87,18S9,18,9,17.94Z" />
-                        </svg>
-                    </button>
-                </div>
-                <!--&SLIDER BTN RIGHT-->
-                <div class="btn_swipe_container btn_swipe_container_right" id="btn_swipe_container_right_slider_services">
-                    <button type="button" class="btn_swipe" id="btn_swipe_right_slider_services">
-                        <svg class="arrow_icon_svg" id="arrow_right_icon_svg" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 18">
-                            <title>Derecha</title>
-                            <path class="cls-1" d="M0,.06V2.88a.08.08,0,0,0,0,0L6,9A.06.06,0,0,1,6,9l-6,6,0,0v2.82c0,.06.09.08.13,0L9,9A0,0,0,0,0,9,9L.13,0S0,0,0,.06Z" />
-                        </svg>
-                    </button>
-                </div>
-            </div>
-
-            <div class="cards_container" id="cards_hot_container">
+            <div class="cards_container swipe_animation_container_half" id="cards_hot_container">
                 <div class="loader_container" data-name="loader_cards_hot_container" id="loader_cards_hot_container">
                     <div class="spinner_container" id="spinner_container_cards_hot">
                         <div class="loading_spinner"></div>
@@ -509,7 +457,7 @@
             </nav>
             <h2 class="title_subsection title_subsection_search_type">Busqueda de proyecto</h2>
 
-            <div class="cards_container cards_search_container">
+            <div class="cards_container swipe_animation_container_half cards_search_container">
                 <div class="loader_container" data-name="loader_cards_search_container" id="loader_cards_search_container">
                     <div class="spinner_container" id="spinner_container_cards_search">
                         <div class="loading_spinner"></div>
@@ -1428,9 +1376,6 @@
         </footer>
     </body>
     <!--^^TEAMPLATES-->
-    <template id="marker_slider_template">
-        <button type="button" class="marker_slider_btn" id=""></button>
-    </template>
     <template id="card_project_template">
         <article class="card card_up project_card" id="" tabindex="0">
             <div class="info_card">
