storage theme actions

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             </div>
         </section>
         <section class="section services_section" id="services_section">
-            <div class="max_width section_content">
+            <div class="section_content">
                 <!--~~TITLE SECTION-->
                 <div class="header_section header_section_services" id="header_section_services">
                     <div class="swipe_animation_container_full">
@@ -428,7 +428,7 @@
                 <div class="swipe_animation_container_full">
                     <h1 class="subtitle_section animation_up" id="subtitle_services">¿Por qué deberias contratarme?</h1>
                 </div>
-                <div class="bullets_container">
+                <div class="max_width bullets_container">
                     <article class="bullet_card">
                         <div class="bullet_content">
                             <h1 class="bullet-title">UX/UI</h1>
@@ -458,7 +458,7 @@
         </section>
 
         <section class="section portfolio_section" id="portfolio_section">
-            <div class="max_width section_content">
+            <div class="section_content">
                 <div class="cards_container swipe_animation_container_half" id="cards_hot_container">
                     <div class="loader_container" data-name="loader_cards_hot_container" id="loader_cards_hot_container">
                         <div class="spinner_container" id="spinner_container_cards_hot">
