change --> illustration svg classes for changing theme colors

--- a/index.html
+++ b/index.html
@@ -381,11 +381,10 @@
                     <div class="about_salute swipe_animation_container_half">
                         <h2 class="title_salute animation_up" id="title_salute">Hola, soy</h2>
                         <h3 class="title_name animation_up" id="title_name">Jonathan Grajeda<span class="title_effect">_</span></h3>
-                        <p>
+                        <p class="about_text">
                             Disfruto de crear, las <span class="animation_key" data-key="dev">computadoras</span> fueron mi primer amor, pero el <span class="animation_key" data-key="design">diseño</span> me hace seguir adelante, aunque si hablamos de mi pasion, estaremos hablando de
                             <span class="animation_key" data-key="illustration">dibujar</span>
                         </p>
-                        <div class="about_text_animation_container"></div>
                     </div>
 
                     <div class="desk_icon_container">
@@ -597,40 +596,40 @@
                                 </g>
                                 <g class="desk_desig_icons">
                                     <g class="column_right design_icon icon_hide">
-                                        <rect class="cls-48" x="509.1" y="161.24" width="34.41" height="75.07" rx="7.57" ry="7.57" />
-                                        <rect class="cls-48" x="509.1" y="144.83" width="73.31" height="12.53" rx="4.37" ry="4.37" />
-                                        <rect class="cls-48" x="548" y="161.24" width="34.41" height="30.98" rx="7.57" ry="7.57" />
-                                        <rect class="cls-48" x="548" y="197.86" width="34.41" height="30.98" rx="7.57" ry="7.57" />
+                                        <rect class="cls-mid" x="509.1" y="161.24" width="34.41" height="75.07" rx="7.57" ry="7.57" />
+                                        <rect class="cls-mid" x="509.1" y="144.83" width="73.31" height="12.53" rx="4.37" ry="4.37" />
+                                        <rect class="cls-mid" x="548" y="161.24" width="34.41" height="30.98" rx="7.57" ry="7.57" />
+                                        <rect class="cls-mid" x="548" y="197.86" width="34.41" height="30.98" rx="7.57" ry="7.57" />
                                     </g>
                                     <g class="column_left design_icon icon_hide">
-                                        <rect class="cls-48" x="462.16" y="27.3" width="17.2" height="12.52" rx="4.37" ry="4.37" />
-                                        <rect class="cls-48" x="444.96" y="43.7" width="34.41" height="42.6" rx="7.57" ry="7.57" />
-                                        <rect class="cls-48" x="406.07" y="43.7" width="34.41" height="16.96" rx="7.57" ry="7.57" />
-                                        <rect class="cls-48" x="406.07" y="63.79" width="34.41" height="16.96" rx="7.57" ry="7.57" />
-                                        <rect class="cls-48" x="406.07" y="83.89" width="34.41" height="16.96" rx="7.57" ry="7.57" />
-                                        <rect class="cls-48" x="405.88" y="103.98" width="34.41" height="16.96" rx="7.57" ry="7.57" />
-                                        <rect class="cls-48" x="444.96" y="89.96" width="34.41" height="30.97" rx="7.57" ry="7.57" />
-                                        <rect class="cls-48" x="406.07" y="27.3" width="52.34" height="12.52" rx="4.37" ry="4.37" />
+                                        <rect class="cls-mid" x="462.16" y="27.3" width="17.2" height="12.52" rx="4.37" ry="4.37" />
+                                        <rect class="cls-mid" x="444.96" y="43.7" width="34.41" height="42.6" rx="7.57" ry="7.57" />
+                                        <rect class="cls-mid" x="406.07" y="43.7" width="34.41" height="16.96" rx="7.57" ry="7.57" />
+                                        <rect class="cls-mid" x="406.07" y="63.79" width="34.41" height="16.96" rx="7.57" ry="7.57" />
+                                        <rect class="cls-mid" x="406.07" y="83.89" width="34.41" height="16.96" rx="7.57" ry="7.57" />
+                                        <rect class="cls-mid" x="405.88" y="103.98" width="34.41" height="16.96" rx="7.57" ry="7.57" />
+                                        <rect class="cls-mid" x="444.96" y="89.96" width="34.41" height="30.97" rx="7.57" ry="7.57" />
+                                        <rect class="cls-mid" x="406.07" y="27.3" width="52.34" height="12.52" rx="4.37" ry="4.37" />
                                     </g>
                                     <g class="logo_2_right design_icon icon_hide">
-                                        <rect class="cls-48" x="541.97" y="94.36" width="41.08" height="7.93" rx="3.96" ry="3.96" />
-                                        <circle class="cls-48" cx="562.51" cy="84.09" r="15.83" />
+                                        <rect class="cls-mid" x="541.97" y="94.36" width="41.08" height="7.93" rx="3.96" ry="3.96" />
+                                        <circle class="cls-mid" cx="562.51" cy="84.09" r="15.83" />
                                     </g>
                                     <g class="logo_1_right design_icon icon_hide">
-                                        <rect class="cls-48" x="510.07" y="73.93" width="33.54" height="6.47" rx="3.24" ry="3.24" />
-                                        <rect class="cls-48" x="513.03" y="57.64" width="27.62" height="20.25" rx="10.13" ry="10.13" />
+                                        <rect class="cls-mid" x="510.07" y="73.93" width="33.54" height="6.47" rx="3.24" ry="3.24" />
+                                        <rect class="cls-mid" x="513.03" y="57.64" width="27.62" height="20.25" rx="10.13" ry="10.13" />
                                     </g>
                                     <g class="logo_1_left design_icon icon_hide">
-                                        <rect class="cls-48" x="408.15" y="216.9" width="41.08" height="7.93" rx="3.96" ry="3.96" />
-                                        <circle class="cls-48" cx="428.7" cy="206.62" r="15.83" />
+                                        <rect class="cls-mid" x="408.15" y="216.9" width="41.08" height="7.93" rx="3.96" ry="3.96" />
+                                        <circle class="cls-mid" cx="428.7" cy="206.62" r="15.83" />
                                     </g>
                                     <g class="logo_2_left design_icon icon_hide">
-                                        <rect class="cls-48" x="448.3" y="198.83" width="33.54" height="6.47" rx="3.24" ry="3.24" />
-                                        <rect class="cls-48" x="451.26" y="182.54" width="27.62" height="20.25" rx="10.13" ry="10.13" />
+                                        <rect class="cls-mid" x="448.3" y="198.83" width="33.54" height="6.47" rx="3.24" ry="3.24" />
+                                        <rect class="cls-mid" x="451.26" y="182.54" width="27.62" height="20.25" rx="10.13" ry="10.13" />
                                     </g>
                                     <g class="logo_3_left design_icon icon_hide">
-                                        <rect class="cls-48" x="436.25" y="173.83" width="24.1" height="4.84" rx="2.42" ry="2.42" />
-                                        <rect class="cls-48" x="437.88" y="154.07" width="20.84" height="15.28" rx="5.44" ry="5.44" transform="translate(286.59 610.02) rotate(-90)" />
+                                        <rect class="cls-mid" x="436.25" y="173.83" width="24.1" height="4.84" rx="2.42" ry="2.42" />
+                                        <rect class="cls-mid" x="437.88" y="154.07" width="20.84" height="15.28" rx="5.44" ry="5.44" transform="translate(286.59 610.02) rotate(-90)" />
                                     </g>
                                     <circle class="elipse_2 design_icon cls-25 icon_hide" cx="384.46" cy="148.69" r="18.56" />
                                     <circle class="elipse_1 design_icon cls-42 icon_hide" cx="545.76" cy="146.88" r="21.47" />
