--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 <div class="bg_section hero_bg"></div>
                 <div class="title_container">
                     <h1>Haciendo<br />ideas<br />realidad</h1>
-                    <h2>Ilustracion <span class="accent_text">/</span> Diseño <span class="accent_text">/</span> Web <span class="accent_text">/</span> Programación</h2>
+                    <h2>Ilustración <span class="accent_text">/</span> Diseño <span class="accent_text">/</span> Web <span class="accent_text">/</span> Programación</h2>
                 </div>
                 <div class="hero_btns_container btns_container">
                     <button class="btn btn_hero" id="hero_btn_about" name="about_section"><h3 class="label_btn">Acerca de mi</h3></button>
@@ -2494,6 +2494,8 @@
         </article>
     </template>
     <template id="list_btn_template">
-        <button type="button" class="btn list_btn" name=""></button>
+        <button type="button" class="btn list_btn" name="">
+            <span class="label_btn"></span>
+        </button>
     </template>
 </html>
